--- a/iNeedClass/Classes/iPhone/Login/RegistroViewController.xib
+++ b/iNeedClass/Classes/iPhone/Login/RegistroViewController.xib
@@ -28,6 +28,7 @@
                 <outlet property="TextApellidos" destination="4El-YG-Z4E" id="4Er-BU-ZrO"/>
                 <outlet property="buttonContinuarNombre" destination="NO0-IN-gaN" id="Z3n-ZX-eEV"/>
                 <outlet property="buttonContinuarUsuario" destination="igR-ZC-axD" id="j2J-xB-u8G"/>
+                <outlet property="collectionView" destination="10v-Bv-mRa" id="XxE-tk-6Uh"/>
                 <outlet property="labelTitle" destination="OMv-AY-cni" id="IQj-3S-kYp"/>
                 <outlet property="scrollview" destination="yEu-d6-yfj" id="66W-ij-wwL"/>
                 <outlet property="textEmail" destination="aLz-dX-6uc" id="soN-fd-ozN"/>
@@ -40,11 +41,11 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="559"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" bounces="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yEu-d6-yfj">
-                    <rect key="frame" x="0.0" y="-62" width="640" height="542"/>
+                    <rect key="frame" x="0.0" y="-62" width="960" height="621"/>
                     <subviews>
                         <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="CNI-aM-pK9" userLabel="datos usuario">
                             <rect key="frame" x="0.0" y="84" width="320" height="231"/>
@@ -177,10 +178,10 @@
                             <color key="backgroundColor" red="0.29411764709999999" green="0.75686274509999996" blue="0.82352941180000006" alpha="1" colorSpace="deviceRGB"/>
                         </view>
                         <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="SXa-zd-LFp" userLabel="avatar">
-                            <rect key="frame" x="0.0" y="79" width="320" height="463"/>
+                            <rect key="frame" x="640" y="63" width="320" height="558"/>
                             <subviews>
                                 <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vbB-WE-Odj">
-                                    <rect key="frame" x="160" y="395" width="160" height="45"/>
+                                    <rect key="frame" x="160" y="446" width="160" height="45"/>
                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     <fontDescription key="fontDescription" name="Montserrat-Regular" family="Montserrat" pointSize="17"/>
                                     <state key="normal" title="Finalizar">
@@ -188,11 +189,11 @@
                                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                     </state>
                                     <connections>
-                                        <action selector="actionNombre:" destination="-1" eventType="touchUpInside" id="Ebm-pa-CiJ"/>
+                                        <action selector="actionFinaliza:" destination="-1" eventType="touchUpInside" id="cRZ-Ii-xBt"/>
                                     </connections>
                                 </button>
                                 <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VEi-H4-lwk">
-                                    <rect key="frame" x="0.0" y="395" width="158" height="45"/>
+                                    <rect key="frame" x="0.0" y="446" width="158" height="45"/>
                                     <color key="backgroundColor" white="0.80160984850000006" alpha="1" colorSpace="calibratedWhite"/>
                                     <fontDescription key="fontDescription" name="Montserrat-Regular" family="Montserrat" pointSize="17"/>
                                     <state key="normal" title="Paso 2">
@@ -200,11 +201,25 @@
                                         <color key="titleShadowColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     </state>
                                     <connections>
-                                        <action selector="pasoAtras:" destination="-1" eventType="touchUpInside" id="oTa-s6-f3W"/>
+                                        <action selector="pasoAtras2:" destination="-1" eventType="touchUpInside" id="PgE-me-ROl"/>
                                     </connections>
                                 </button>
+                                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="10v-Bv-mRa">
+                                    <rect key="frame" x="0.0" y="37" width="320" height="401"/>
+                                    <color key="backgroundColor" red="0.29411764709999999" green="0.75686274509999996" blue="0.82352941180000006" alpha="1" colorSpace="deviceRGB"/>
+                                    <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="4gS-9P-YOd">
+                                        <size key="itemSize" width="75" height="75"/>
+                                        <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                        <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                        <inset key="sectionInset" minX="20" minY="20" maxX="20" maxY="0.0"/>
+                                    </collectionViewFlowLayout>
+                                    <connections>
+                                        <outlet property="dataSource" destination="-1" id="0ay-0U-bet"/>
+                                        <outlet property="delegate" destination="-1" id="97I-Gd-euT"/>
+                                    </connections>
+                                </collectionView>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Escoge tu avatar" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iVf-Dk-eCz">
-                                    <rect key="frame" x="18" y="41" width="284" height="21"/>
+                                    <rect key="frame" x="18" y="8" width="284" height="21"/>
                                     <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
                                     <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     <nil key="highlightedColor"/>
@@ -224,7 +239,7 @@
             </subviews>
             <color key="backgroundColor" red="0.29411764709999999" green="0.75686274509999996" blue="0.82352941180000006" alpha="1" colorSpace="deviceRGB"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="279" y="421"/>
+            <point key="canvasLocation" x="279" y="460.5"/>
         </view>
     </objects>
 </document>
